--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   lottie: ^2.7.0
   intl: ^0.18.1
   uuid: ^4.2.2
+  image_picker: ^1.0.5
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
