--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   uuid: ^4.2.2
   image_picker: ^1.0.5
   path_provider: ^2.1.1
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
