--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^1.0.5
   path_provider: ^2.1.1
   google_nav_bar: ^5.0.6
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
