--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.1.1
   google_nav_bar: ^5.0.6
   flutter_screenutil: ^5.9.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
