--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   flutter_screenutil: ^5.9.0
   flutter_speed_dial: ^7.0.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
