--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_mobx: ^2.1.1
   get_it: ^7.6.4
   shared_preferences: ^2.2.2
-  flutter_inappwebview: ^5.8.0
+  #flutter_inappwebview: ^5.8.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   lottie: ^2.7.0
