--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_speed_dial: ^7.0.0
   carousel_slider: ^4.2.1
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
