added native splash

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   carousel_slider: ^4.2.1
   url_launcher: ^6.2.4
+  flutter_native_splash: ^2.3.11
 
 dev_dependencies:
   flutter_test:
