--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,11 +10,53 @@ pluginManagement {
 
     includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
 
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+
     plugins {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
     }
 }
 
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "7.3.0" apply false
+}
+
 include ":app"
 
-apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+
+// pluginManagement {
+//     def flutterSdkPath = {
+//         def properties = new Properties()
+//         file("local.properties").withInputStream { properties.load(it) }
+//         def flutterSdkPath = properties.getProperty("flutter.sdk")
+//         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+//         return flutterSdkPath
+//     }
+//     settings.ext.flutterSdkPath = flutterSdkPath()
+
+//     includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+
+//     repositories {
+//         google()
+//         mavenCentral()
+//         gradlePluginPortal()
+//     }
+// }
+
+// plugins {
+//     //id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+//     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+//     id "com.android.application" version "7.3.0" apply false
+//     id "org.jetbrains.kotlin.android" version "1.9.22" apply false // Newer Version
+//     id "com.google.gms.google-services" version "4.4.0" apply false
+//     id "com.google.firebase.crashlytics" version "2.9.9" apply false
+// }
+
+// include ":app"
+
+// apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
